aplicación de estilos

--- a/index.html
+++ b/index.html
@@ -68,15 +68,11 @@
         <br>
         <h2>Producto más vendido</h2>
         <br>
-        <a href="">Ver más...</a>
     </div>
 
-    <div class="slider"> <!--slider visual, algunos productos-->
-        <ul class="sliders-images">
-            <li><img src="images/slider1.jpg" alt="" width="820" height="500"></li>
-            <li><img src="images/slider2.png" alt="" width="820" height="500"></li>
-            <li><img src="images/slider3.jpg" alt="" width="820" height="500"></li>
-        </ul>
+    <div class="slider-container"> <!--slider visual, algunos productos-->
+        <div class="slider position"></div>
+        <a href="">Ver más...</a>
     </div>
 
     <div class="sugeridos"> <!--seccion de productos sugeridos-->
