arreglo de diseños

--- a/index.html
+++ b/index.html
@@ -1,43 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MTG Collectibles Store</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" 
-    rel="stylesheet">
 
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="preload" href="CSS/normalize.css">
-
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="preload" href="CSS/style.css">
 </head>
 
 <body>
     <header class="titulo">
-        <div class="busqueda"> <!--buscador de la tienda-->
+        <div class=""> <!--buscador de la tienda-->
             <img class="imagen_logo" src="images/logo_parte_superior.PNG" alt="logo" width="250" height="100">  
-            <form method="get" id="search-form">
-                <fieldset>
-                    <input class="barra-buscador" type="text" id="search-input" placeholder="Busca un producto o nombre de carta"/>
-                    <input class="btn-buscar" type="submit" value="Buscar" />
-                    <i class="search-icon"></i>
-                </fieldset>
-            </form>
         </div>
+        <nav class="barra-navegacion-contenedor">
+            <ul><!--barra de negacion de la tienda-->
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="sets.html">Sets</a></li>
+                <li><a href="singles.html">Singles</a></li>
+                <li><a href="about_us.html">About Us</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <nav class="barra-navegacion-contenedor"> <!--barra de negacion de la tienda-->
-        <a href="hindex.html">Inicio</a>
-        <a href="sets.html">Sets</a>
-        <a href="singles.html">Singles</a>
-        <a href="about_us.html">About Us</a>
-        <a href="contactanos.html">Contactanos</a>
-    </nav>
+    
 
     <!-- <nav class="mi-cuenta">
         <ul class="usuario">
